--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-    <title>ここに難易度表の名前</title>
+    <title>でこぴー</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,16 +27,13 @@
     <div class="container">
 
         <div class="alert alert-success mb-3" role="alert">
-            <p>ここに難易度表の説明文。次期難易度表フォーマット対応。</p>
-            <p>難易度表の読み込みと表示に数秒かかります。</p>
-            <hr>
-            <p class="mb-0">説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文</p>
+            <p>2023/07/28時点</p>
         </div>
 
 
         <!--ここから難易度表本体-->
         <div>
-            <table class="table table-light table-striped table-hover" id="table_int">
+            <table class="table table-light table-striped table-hover table-sm" id="table_int">
             </table>
         </div>
         <script language="javascript" type="text/javascript">
